worked on user settings